<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to share your daily life or see your friends\' activities? Only on StoryApp!</string>
    <string name="title_welcome_page">Welcome to Story App!</string>
    <string name="title_signup_page">Complete your personal data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_login_page">Please login first!</string>
    <string name="message_login_page">Use your registered account</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="login_image_description">Login Image</string>
    <string name="image_story_description">Story Image</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add Story</string>
    <string name="title_setting">Setting</string>
    <string name="set_language">Language</string>
    <string name="change_language">Change language display</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Image description</string>
    <string name="empty_image_warning">Please insert an image file first</string>
    <string name="empty_description_warning">Please enter an image description first</string>
    <string name="upload_success">Story uploaded successfully!</string>
    <string name="upload_error">Story upload failed!</string>
    <string name="message_register_success">Your account has been successfully created. Please login!</string>
    <string name="regist_success">Registration Successful</string>
    <string name="error_failed">An error occurred</string>
    <string name="register_failed">Registration Failed</string>
    <string name="login_success">Login Successful</string>
    <string name="welcome_user">Welcome, %1$s!</string>
    <string name="next">Next</string>
    <string name="login_failed">Login Failed</string>
    <string name="user">User</string>
    <string name="error">Error: %1$s</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="maps">Maps</string>
    <string name="title_maps">Stories Location</string>
    <string name="add_location">Add location   </string>
    <string name="location_not_found">Location not found</string>
    <string name="retry">Try again</string>
</resources>