<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.storyapp.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_story"
        android:name="com.bangkit.storyapp.view.addstory.AddStoryFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add_story" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.bangkit.storyapp.view.settings.SettingsFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_settings" />


</navigation>