<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutChangeLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/set_language"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivLanguage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDarkModeDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                android:textSize="14sp"
                android:textColor="#757575"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivLanguage"
                app:layout_constraintTop_toBottomOf="@id/tvLanguage" />

            <ImageView
                android:id="@+id/ivLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/change_language"
                android:src="@drawable/ic_baseline_exit_to_app_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Tombol Logout -->
        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/logout"
            app:layout_constraintTop_toBottomOf="@id/layoutChangeLanguage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
